--- a/_template/index.html
+++ b/_template/index.html
@@ -14,11 +14,11 @@
         </div>
         <div class="links">
           <ul>
-            <li><a href="Home">Home</a></li>
-            <li><a href="Home">About Us</a></li>
-            <li><a href="Home">Our Services</a></li>
-            <li><a href="Home">What do we do?</a></li>
-            <li><a href="Home">FAQ</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="services.html">Our Services</a></li>
+            <li><a href="whatdowedo.html">What do we do?</a></li>
+            <li><a href="faq.html">FAQ</a></li>
           </ul>
           <button class="btn btn-search">
             <i class="fas fa-search"></i>
@@ -33,13 +33,24 @@
           <h1>Struggling with your start-up/business?</h1>
           <h2>Make it a resounding success with Blu Sav Ltd!</h2>
           <div class="buttons">
-            <button class="btn btn-contact">
+            <a
+              class="btn btn-contact"
+              href="tel:+919082540960"
+              target="_blank"
+              rel="noopener"
+            >
               <span><i class="fa fa-phone-alt fa-fw"></i> Contact Now</span>
               <span>+91 9082540960</span>
-            </button>
-            <button class="btn btn-whatsapp">
-              <i class="fa fa-whatsapp fa-fw"></i> Whatsapp
-            </button>
+            </a>
+            <a
+              class="btn btn-whatsapp"
+              href="https://api.whatsapp.com/send?phone=919082540960&text=Hello%20there,%20I%20want%20an%20online%20quote%20for%20your%20services!"
+              target="_blank"
+              rel="noopener"
+            >
+              <span><i class="fa fa-whatsapp fa-fw"></i> Whatsapp</span>
+              <span>wa.me/919082540960</span>
+            </a>
           </div>
           <p>
             We hate startup ideas failing due to lack of support in the
