--- a/_template/index.html
+++ b/_template/index.html
@@ -15,9 +15,9 @@
         <div class="links">
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="whatdowedo.html">What do we do?</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Our Services</a></li>
-            <li><a href="whatdowedo.html">What do we do?</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
           <button class="btn btn-search">
@@ -59,9 +59,88 @@
             you a wide range of professional services that you require to build
             or grow your startup! Choose Disruptive Innovation With Us!
           </p>
+          <div class="features">
+            <ul>
+              <li>
+                <i class="fa fa-universal-access fa-fw"></i> Easy Accessibility
+              </li>
+              <li><i class="fa fa-check-circle fa-fw"></i> The Best Value</li>
+              <li><i class="fa fa-heart fa-fw"></i> Personal Care</li>
+              <li><i class="fa fa-list-alt fa-fw"></i> Organized Wordflow</li>
+            </ul>
+          </div>
+          <div class="divider"></div>
         </div>
       </div>
     </main>
+
+    <section id="section_whatdowedo">
+      <div class="container">
+        <div class="text">
+          <h1>We’re With You Every Step of The Way</h1>
+          <p>
+            Spending sleepless nights due to fear of failure? Fret not! Be it
+            any service you require to grow or build your business, Blu Saviors
+            LLP is here 24*7 to provide it for you. We do the hard work involved
+            in building a business, so that you can focus on the product better.
+          </p>
+        </div>
+        <div class="offerings">
+          <ul>
+            <li>
+              <div class="offering-logo-wrap">
+                <div class="offering-logo offering-logo-1"></div>
+              </div>
+              <h3>Business Model</h3>
+              <p>
+                We use a wide host of AI tools to analyse bottlenecks, and come
+                up with the best business model for your startup.
+              </p>
+            </li>
+            <li>
+              <div class="offering-logo-wrap">
+                <div class="offering-logo offering-logo-2"></div>
+              </div>
+              <h3>Portfolio Building</h3>
+              <p>
+                Our experts will develop beautiful websites, write extensive
+                quotations, business proposals, and render images.
+              </p>
+            </li>
+            <li>
+              <div class="offering-logo-wrap">
+                <div class="offering-logo offering-logo-3"></div>
+              </div>
+              <h3>Apply For Funding</h3>
+              <p>
+                We walk you through every stage of funding, and create killer
+                elevator pitches with presentations to raise money.
+              </p>
+            </li>
+            <li>
+              <div class="offering-logo-wrap">
+                <div class="offering-logo offering-logo-4"></div>
+              </div>
+              <h3>Prototype Refining</h3>
+              <p>
+                Our managers shall find the suitable experts and refine your
+                prototype to make it a hit in the market.
+              </p>
+            </li>
+            <li>
+              <div class="offering-logo-wrap">
+                <div class="offering-logo offering-logo-5"></div>
+              </div>
+              <h3>Strategic Marketing</h3>
+              <p>
+                We combine our skills with AI bots, and strategically increase
+                your client base through SEO, and cold approach.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://kit.fontawesome.com/da3e7f9dfd.js"
