--- a/_template/index.html
+++ b/_template/index.html
@@ -7,6 +7,7 @@
     <title>Blu Sav</title>
   </head>
   <body>
+    <div class="nav-back"></div>
     <nav>
       <div class="container">
         <div class="brand">
@@ -142,9 +143,16 @@
       </div>
     </section>
 
+    <section id="section_aboutus">
+      <div class="overlay">
+        <div class="divider"></div>
+      </div>
+    </section>
+
     <script
       src="https://kit.fontawesome.com/da3e7f9dfd.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
