--- a/_template/index.html
+++ b/_template/index.html
@@ -15,10 +15,10 @@
         </div>
         <div class="links">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="whatdowedo.html">What do we do?</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Our Services</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#section_whatdowedo">What do we do?</a></li>
+            <li><a href="#section_aboutus">About Us</a></li>
+            <li><a href="#section_ourservices">Our Services</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
           <button class="btn btn-search">
@@ -146,6 +146,143 @@
     <section id="section_aboutus">
       <div class="overlay">
         <div class="divider"></div>
+        <div class="container">
+          <div class="top">
+            <div class="left">
+              <h1>About Us</h1>
+              <p>
+                We, at <span class="invert">Blu Saviors LLP</span>, have an
+                excellent team with different strengths. Our aim is to bring a
+                revolution in the entrepreneurial ecosystem of the world, by
+                enabling brilliant startup ideas to become successful startups.
+                We also aim to grow the existing startups and businesses with
+                our affordable, quality services.
+              </p>
+            </div>
+            <div class="right">
+              <div class="picture-box"></div>
+            </div>
+          </div>
+          <div class="bottom">
+            <a
+              class="btn btn-whatsapp"
+              href="https://api.whatsapp.com/send?phone=919082540960&text=Hello%20there,%20I%20want%20an%20online%20quote%20for%20your%20services!"
+              target="_blank"
+              rel="noopener"
+            >
+              <span
+                ><i class="fa fa-whatsapp fa-fw"></i> Message us on
+                Whatsapp</span
+              >
+              <span>wa.me/919082540960</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="section_ourservices">
+      <div class="container">
+        <div class="top">
+          <h1>Our BluSav Services</h1>
+          <p>
+            Blu Saviors are constantly adding more services as we scale up our
+            family. Stay tuned to know the latest innovations from IIT Madras.
+            We aspire to add value to you at every point because we believe that
+            you should get more than what you pay for.
+          </p>
+        </div>
+        <div class="bottom">
+          <div class="servicecard">
+            <h3>Interactive Website Development</h3>
+            <p>
+              We specialize in creating beautiful responsive websites. You are
+              assured of a perfect online home.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>SEO Optimisation For Your SERP</h3>
+            <p>
+              We excel at placing you on the first page of Google by following
+              the SEO optimisation.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Feasible Ideas into Prototypes</h3>
+            <p>
+              We help you create a working prototype of any idea that you have.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Client Outreach Campaigns</h3>
+            <p>
+              We generate leads and create outreach campaigns through cold
+              calling and other methods.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Content Writing</h3>
+            <p>
+              We offer excellent content curated specially for you, in all
+              different niches and formats.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Branding Campaigns</h3>
+            <p>
+              We spend our creative energy into creating successful branding
+              campaigns for your company.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>SEO Content Marketing</h3>
+            <p>
+              We perform a comprehensive research of keywords, and undertake
+              content marketing.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Social Media Marketing</h3>
+            <p>
+              We use our skills and tools to increase your social media
+              engagement.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Pitch Presentation</h3>
+            <p>
+              We draft killer pitches and create informative appealing slides to
+              help you in your meetings.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Copywriting</h3>
+            <p>
+              We write beautiful promotional text in a compelling way to promote
+              your brand.
+            </p>
+          </div>
+          <div class="servicecard">
+            <h3>Proofreading</h3>
+            <p>
+              We have excellent proofreaders. With us, you can be assured of
+              error-free content.
+            </p>
+          </div>
+          <div class="servicecard">
+            <a
+              class="btn btn-contact"
+              href="tel:+919082540960"
+              target="_blank"
+              rel="noopener"
+            >
+              <span
+                ><i class="fa fa-phone-alt fa-fw"></i> Get a Free Quote</span
+              >
+              <span>+91 9082540960</span>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
