--- a/_template/index.html
+++ b/_template/index.html
@@ -21,9 +21,18 @@
             <li><a href="#section_ourservices">Our Services</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
-          <button class="btn btn-search">
-            <i class="fas fa-search"></i>
-          </button>
+          <div class="search-box">
+            <input
+              type="text"
+              name="q"
+              class="search-input"
+              id="input_searchBox"
+              placeholder="Enter your query"
+            />
+            <button class="btn btn-search">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
         </div>
       </div>
     </nav>
